correct align button in premium file box

--- a/laterpay/asset_sources/scss/pages/_post_view.scss
+++ b/laterpay/asset_sources/scss/pages/_post_view.scss
@@ -216,6 +216,7 @@
         position: relative !important;
         right: $fs--05 !important;
         top: $fs--075 !important;
+        padding: 4px 7px 4px 34px!important;
 
         &:before {
             font-size: round($fs * 2.5) !important;
